--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Jericho Bantiquete",
-  "name": "Jericho Bantiquete",
+  "short_name": "Manish Adtani",
+  "name": "Manish Adtani",
   "icons": [
     {
       "src": "favicon.png",
